# encephalon

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_note.txt  thoughts.md  thoughts.txt
.github/workflows/: main_test-lint.yml
encephalon/: main.py
src/encephalon/: cli.py  config.py  main.py  parsing.py
src/encephalon/storage/: archive.py
tests/: conftest.py  test_parsing.py
