[tool.poetry]
name = "encephalon"
version = "0.1.0"
description = "A tool to remove the brain- just shortly."
authors = ["Thomas Lawton <thomas.lawton@ratmail.cc>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
isort = "^5.12.0"
mypy = "^1.4.1"
flake8 = "^7.0.0"

[tool.poetry.scripts]
notes = "notes_cli.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
